# TheEye

./: .gitignore  README.md  pyproject.toml
backend/: celery.py  settings.py  urls.py
backend/fixtures/: user.json
events/: models.py  serializers.py  tasks.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_timestamp.py
sessions_app/: models.py
sessions_app/migrations/: 0001_initial.py
