[tool.poetry]
name = "theeye"
version = "0.1.0"
description = "Project for CA"
authors = ["Felipe <fglf18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
